<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nootri</string>
    <string name="ok">Ok</string>
    <string name="login_button_sign_text">Sign in</string>
    <string name="login_username_title_text">Email</string>
    <string name="login_password_title_text">Password</string>
    <string name="login_button_create_text">Create an account</string>
    <string name="take_picture_button">Take Picture</string>
    <string name="review_history_button">History</string>
    <string name="review_stats_button">Statistics</string>
    <string name="signup_name_title_text">Your name</string>
    <string name="signup_username_title_text">Email</string>
    <string name="signup_password1_title_text">Password</string>
    <string name="signup_password2_title_text">Repeat password</string>
    <string name="signup_button_submit">Sign up</string>
    <string name="upload_button_text">Upload</string>
	<string name="upload_prompt">Picture saved!</string>
	<string name="login_error">Authentication error, please check your credentials!</string>
	<string name="password_mismatch">Your passwords don\'t match!</string>
	<string name="service_error">Network isn\'t responding at the moment. Please try again later.</string>
	<string name="username_error">This user already exists!</string>
	<string name="menu_log_out">Logout</string>
	<string name="menu_settings">Settings</string>
	<string name="no_images">You don\'t have any images yet!</string>
	<string name="d_image">Attention!</string>
	<string name="d_image_conf">Delete</string>
	<string name="d_image_cancel">Cancel</string>
	<string name="d_image_info">This will delete this image, proceed?</string>
	<string name="signup_password_length">Password has to be at least 6 characters!</string>
	<string name="signup_invalid_mail">Please enter a valid e-mail address.</string>
	<string name="cb1">Breakfast</string>
	<string name="cb2">Lunch</string>
	<string name="cb3">Dinner</string>
	<string name="cb4">Snack</string>
	<string name="cb5">Drink</string>
	<string name="stats_meals">Number of meals:</string>
	<string name="stats_drinks">Number of drinks:</string>
	<string name="stats_snacks">Number of snacks:</string>
	<string name="stats_breakfast_time">Time of breakfast:</string>
	<string name="stats_lunch_time">Time of lunch:</string>
	<string name="stats_dinner_time">Time of dinner:</string>
	<string name="stats_last_meal">Last meal:</string>
	<string name="website">www.nootri.com</string>
	<string name="no_stats">You don\'t have any images yet!</string>
   	<string name="signup_success">Your account is created! You can sign in now.</string>   
	<string name="comment_hint">Type comment</string>
	<string name="improve_button">Improve Health</string>
	<string name="menu_button">Menu</string>
	<string name="comment_title">Short comment</string>
	<string name="comment_example">Example: Tea with sugar</string>
	<string name="save_picture">Save Picture</string>
	<string name="retake_picture">Retake</string>
</resources>
