<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginTop="0dp"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="0dp" >

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:paddingTop="20dp" >

            <Button
                android:id="@+id/take_picture"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_green"
                android:drawableLeft="@drawable/ic_picture"
                android:drawablePadding="10dp"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/take_picture_button"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/review_history"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_green"
                android:drawableLeft="@drawable/ic_history"
                android:drawablePadding="10dp"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/review_history_button"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/review_stats"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_green"
                android:drawableLeft="@drawable/ic_stats"
                android:drawablePadding="10dp"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/review_stats_button"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/review_health"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_green"
                android:drawableLeft="@drawable/ic_improve"
                android:drawablePadding="10dp"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/improve_button"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hyperlink"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:autoLink="web"
                android:gravity="center_horizontal"
                android:text="@string/website"
                android:textColorLink="#f9ce46"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>