<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/Signup_Layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dip" >

        <TextView
            android:id="@+id/signup_username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/login_username_title_text"
            android:textColor="#f9ce46"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/signup_username_textbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_username_title"
            android:layout_marginBottom="12dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@android:drawable/editbox_background"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/signup_password1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_username_textbox"
            android:layout_marginLeft="10dip"
            android:text="@string/signup_password1_title_text"
            android:textColor="#f9ce46"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/signup_password1_textbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_password1_title"
            android:layout_marginBottom="12dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@android:drawable/editbox_background"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="22dip" />

        <TextView
            android:id="@+id/signup_password2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_password1_textbox"
            android:layout_marginLeft="10dip"
            android:text="@string/signup_password2_title_text"
            android:textColor="#f9ce46"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/signup_password2_textbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_password2_title"
            android:layout_marginBottom="12dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@android:drawable/editbox_background"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="22sp" />

        <Button
            android:id="@+id/signup_button_submit"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/signup_password2_textbox"
            android:layout_marginRight="10dip"
            android:background="@drawable/button_green"
            android:text="@string/signup_button_submit"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>