<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vw1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="2dp">

        <ImageView
            android:id="@+id/bars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_stats" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/bars"
            android:textColor="#f9ce46"
            android:textSize="22dip" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/vw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/day"
        android:orientation="vertical"
         >

        <LinearLayout
            android:id="@+id/vw3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/day"
            android:gravity="right"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/meals_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/orange_square"
                android:paddingBottom="10dp"
                android:paddingLeft="12dp"
                android:paddingRight="13dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/meals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/stats_meals"
                    android:textColor="#9f6820"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/meals_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/meals"
                    android:layout_centerHorizontal="true"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/drinks_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/orange_square"
                android:paddingBottom="10dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/drinks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/stats_drinks"
                    android:textColor="#9f6820"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/drinks_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/drinks"
                    android:layout_centerHorizontal="true"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/snacks_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:background="@drawable/orange_square"
                android:paddingBottom="10dp"
                android:paddingLeft="12dp"
                android:paddingRight="13dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/snacks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/stats_snacks"
                    android:textColor="#9f6820"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/snacks_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/snacks"
                    android:layout_centerHorizontal="true"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vw4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/day"
            android:orientation="vertical" >
            
        <RelativeLayout
            android:id="@+id/breakfast_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/upper_square" 
            android:layout_marginRight="95dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_breakfast_time"
                android:textColor="#66747c" 
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/breakfast_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/vw3"
                android:textColor="#2b3134"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:textStyle="bold" />
            
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lunch_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/center_square"
            android:layout_marginRight="95dp"
            android:padding="10dp"> >

            <TextView
                android:id="@+id/lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_lunch_time"
                android:textColor="#66747c" 
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/lunch_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/vw3"
                android:textColor="#2b3134"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dinner_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/under_square"
            android:layout_marginRight="95dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_dinner_time"
                android:textColor="#66747c" 
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/dinner_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/vw3"
                android:textColor="#2b3134"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lastmeal_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/grey_square"
            android:layout_marginRight="95dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/lastmeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_last_meal"
                android:textColor="#78848b" 
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/lastmeal_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/vw3"
                android:textColor="#2b3134"
                android:textSize="16sp"
                android:layout_alignParentRight="true"
                android:textStyle="bold" />
        </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>